INT-11162: Fix Joule Reports names wrap at snap

--- a/less/bootswatch/snap-core.less
+++ b/less/bootswatch/snap-core.less
@@ -2816,6 +2816,10 @@ table#user-grades tr.avg td.cell {
     background: none;
 }
 
+.report-category-overlay .yui3-widget {
+    width: inherit !important;
+}
+
 .report-course-overlay .yui3-widget {
     width: inherit !important;
     min-width: 300px;
