--- a/style/moodle.css
+++ b/style/moodle.css
@@ -20031,6 +20031,9 @@ table#user-grades tr.avg td.cell {
   border: none;
   background: none;
 }
+.report-category-overlay .yui3-widget {
+  width: inherit !important;
+}
 .report-course-overlay .yui3-widget {
   width: inherit !important;
   min-width: 300px;
